# develop

./: .gitignore
develop/cmake/: amd64-linux.cmake  arm64-droid.cmake  armv7-droid.cmake  win64-win.cmake
develop/script/boost/: build-amd64.bat  build-amd64.sh  build-arm64.bat  build-armv7.bat  build-setting.bat  build-win64.bat
develop/script/boost/cmake/: CMakeLists.txt
develop/script/boost/cmake/date_time/: CMakeLists.txt
develop/script/curl/: build-amd64.bat  build-amd64.sh  build-arm64.bat  build-armv7.bat  build-setting.bat  build-win64.bat
develop/script/lz4/: build-amd64.bat  build-amd64.sh  build-arm64.bat  build-arm64.sh  build-armv7.bat  build-armv7.sh  build-setting.bat
develop/script/mongo/: build-amd64.bat  build-amd64.sh  build-setting.bat  build-win64.bat
develop/script/ndk/: ndk-linux.bat  ndk-setting.bat
develop/script/ssl/: build-amd64.bat  build-amd64.sh  build-arm64.bat  build-armv7.bat  build-setting.bat
includes/rapidxml/: rapidxml_print.hpp
libraries/win64/: bson.lib  bsoncxx.lib  curl.lib  lz4.lib  mongoc.lib  mongocxx.lib
testcpp/boost/: CMakeLists.txt  Main.cpp
testcpp/curl/: CMakeLists.txt  Main.cpp
testcpp/json/: CMakeLists.txt  Main.cpp  build.sh
testcpp/log/: Main.cpp
testcpp/lz4/: CMakeLists.txt  Main.cpp  build.bat  build.sh
testcpp/mongo/: CMakeLists.txt  CreateDB.cpp  CreateDB.hpp  DeleteDB.cpp  DeleteDB.hpp  DropDB.cpp  DropDB.hpp  InsertDB.cpp  InsertDB.hpp  Main.cpp  QueryDB.cpp  QueryDB.hpp  UpdateDB.cpp  UpdateDB.hpp
testcpp/winrap/: CMakeLists.txt  Main.cpp
testcpp/xml/: Main.cpp
(+2 files in other folders)
