cmake_minimum_required(VERSION 3.10)
project(startup)
add_definitions(-DCURL_STATICLIB)
if(UNIX)
    set(CMAKE_EXE_LINKER_FLAGS "-ldl -lz -pthread")
endif()
include_directories(../../includes)
link_directories(../../libraries/${ARCH_NAME})
aux_source_directory(. SRC)
add_executable(startup ${SRC})
if(UNIX)
    target_link_libraries(startup curl ssl crypto)
else()
    target_link_libraries(startup curl)
endif()
